--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,35 +28,20 @@ jobs:
     - name: Grant execute permission for Gradle Wrapper
       run: chmod +x ./gradlew
 
+    # ✅ `application-template.properties`를 `application.properties`로 복사
+    - name: Copy application-template.properties to application.properties
+      run: cp src/main/resources/application-template.properties src/main/resources/application.properties
 
-    # application.yml 생성
-    - name: Generate application.yml
+    # ✅ 환경 변수 설정 (secrets 주입)
+    - name: Export environment variables
       run: |
-        cat <<EOF > src/main/resources/application.yml
-        spring:
-          datasource:
-            url: "${{ secrets.DB_URL }}"
-            username: "${{ secrets.DB_USER_NAME }}"
-            password: "${{ secrets.DB_PASSWORD }}"
-            driver-class-name: com.mysql.cj.jdbc.Driver
-          jpa:
-            database-platform: org.hibernate.dialect.MySQL8Dialect
-            hibernate:
-              ddl-auto: update
-        jwt:
-          secret: "${{ secrets.JWT_SECRET_KEY }}"
-        openai:
-          api:
-            url: "${{ secrets.OPEN_AI_API_URL }}"
-            key: "${{ secrets.OPEN_AI_API_KEY }}"
+        export DB_URL="${{ secrets.DB_URL }}"
+        export DB_USER_NAME="${{ secrets.DB_USER_NAME }}"
+        export DB_PASSWORD="${{ secrets.DB_PASSWORD }}"
+        export JWT_SECRET_KEY="${{ secrets.JWT_SECRET_KEY }}"
+        export OPEN_AI_API_KEY="${{ secrets.OPEN_AI_API_KEY }}"
+        export OPEN_AI_API_URL="${{ secrets.OPEN_AI_API_URL }}"
 
-        EOF
-      shell: bash
-
-    # Gradle 빌드 실행 (환경 변수 강제 주입)
+    # ✅ Gradle 빌드 실행
     - name: Build with Gradle Wrapper
-      run: |
-        DB_URL="${{ secrets.DB_URL }}" \
-        DB_USER_NAME="${{ secrets.DB_USER_NAME }}" \
-        DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
-        ./gradlew build --info
+      run: ./gradlew build --info
