--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI with Gradle
+name: Java CI/CD with Gradle & Docker
 
 on:
   push:
@@ -8,26 +8,26 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     permissions:
       contents: read
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
-        
+
     - name: Grant execute permission for Gradle Wrapper
       run: chmod +x ./gradlew
 
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      uses: gradle/actions/setup-gradle@v4.0.0
 
-    # Environment variables section
+    # ✅ Gradle 빌드 실행 (환경 변수 주입)
     - name: Build with Gradle Wrapper
       env:
         OPEN_AI_API_KEY: ${{ secrets.OPEN_AI_API_KEY }}
@@ -40,8 +40,22 @@ jobs:
         DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       run: ./gradlew build -x test
 
-  dependency-submission:
+    # ✅ Docker Hub 로그인 (Gradle 빌드 성공 시에만 실행)
+    - name: Log in to Docker Hub
+      if: success()
+      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
 
+    # ✅ Docker 이미지 빌드 (Gradle 빌드 성공 시에만 실행)
+    - name: Build Docker Image
+      if: success()
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/clubhouse-api:latest .
+
+    # ✅ Docker Hub에 푸시 (Gradle 빌드 성공 시에만 실행)
+    - name: Push Docker Image
+      if: success()
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/clubhouse-api:latest
+
+  dependency-submission:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -55,4 +69,4 @@ jobs:
         distribution: 'temurin'
 
     - name: Generate and submit dependency graph
-      uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+      uses: gradle/actions/dependency-submission@v4.0.0
