--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: CD - Deploy to EC2
 
 on:
   workflow_run:
-    workflows: ["CD - Build & Push Docker Image"]
+    workflows: ["Java CI/CD with Gradle & Docker"]
     types:
       - completed
 
