--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: Java CI/CD with Gradle & Docker
+name: Java CI with Gradle & Docker
 
 on:
   push:
@@ -27,28 +27,57 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4.0.0
 
+    # ✅ application.properties 파일 동적 생성
+    - name: Generate application.properties
+      run: |
+        cat <<EOF > src/main/resources/application.properties
+        spring.application.name=Club_House_API_Server
+
+        # Database
+        spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+        spring.datasource.url=${{ secrets.DB_URL }}
+        spring.datasource.username=${{ secrets.DB_USER_NAME }}
+        spring.datasource.password=${{ secrets.DB_PASSWORD }}
+
+        # JPA
+        spring.jpa.hibernate.ddl-auto=update
+        spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+        spring.jpa.show-sql=false
+        spring.jpa.format-sql=true
+
+        # JWT
+        jwt.secret=${{ secrets.JWT_SECRET_KEY }}
+        jwt.expire=3600000
+
+        # OpenAI API
+        openai.api.key=${{ secrets.OPEN_AI_API_KEY }}
+        openai.api.url=${{ secrets.OPEN_AI_API_URL }}
+        openai.model=gpt-4o-mini
+
+        # Whisper API
+        whisper.api.url=https://api.openai.com/v1/chat/completions
+
+        # S3
+        cloud.aws.credentials.access-key=${{ secrets.AWS_CREDENTIALS_ACCESS_KEY }}
+        cloud.aws.credentials.secret-key=${{ secrets.AWS_CREDENTIALS_SECRET_KEY }}
+        cloud.aws.region.static=ap-northeast-2
+        cloud.aws.s3.bucket=${{ secrets.AWS_BUCKET_NAME }}
+        EOF
+
+    # ✅ Gradle 빌드 실행 (환경 변수 자동 포함)
     - name: Build with Gradle Wrapper
-      env:
-        OPEN_AI_API_KEY: ${{ secrets.OPEN_AI_API_KEY }}
-        OPEN_AI_API_URL: ${{ secrets.OPEN_AI_API_URL }}
-        AWS_CREDENTIALS_ACCESS_KEY: ${{ secrets.AWS_CREDENTIALS_ACCESS_KEY }}
-        AWS_CREDENTIALS_SECRET_KEY: ${{ secrets.AWS_CREDENTIALS_SECRET_KEY }}
-        AWS_BUCKET_NAME: ${{ secrets.AWS_BUCKET_NAME }}
-        DB_URL: ${{ secrets.DB_URL }}
-        DB_NAME: ${{ secrets.DB_USER_NAME }}
-        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
       run: ./gradlew build -x test
 
+    # ✅ Docker Hub 로그인
     - name: Log in to Docker Hub
-      if: success()
-      run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+      run: echo "${{ secrets.DOCKER_PAT }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+    # ✅ Docker 이미지 빌드
     - name: Build Docker Image
-      if: success()
       run: docker build -t ${{ secrets.DOCKER_USERNAME }}/onclub-api:latest .
 
-    - name: Push Docker Image
-      if: success()
+    # ✅ Docker Hub에 푸시
+    - name: Push Docker Image to Docker Hub
       run: docker push ${{ secrets.DOCKER_USERNAME }}/onclub-api:latest
 
   dependency-submission:
@@ -58,6 +87,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
