--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,6 +6,10 @@ on:
     types:
       - completed
 
+permissions:
+  actions: read
+  contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -14,29 +18,18 @@ jobs:
 
     steps:
     - name: SSH into EC2 & Deploy
-      env:
-        EC2_HOST: ${{ secrets.EC2_HOST }}
-        EC2_USER: ${{ secrets.EC2_USER }}
-        EC2_KEY: ${{ secrets.EC2_KEY }}
       run: |
-        echo "$EC2_KEY" > ec2-key.pem
-        chmod 600 ec2-key.pem
         ssh -o StrictHostKeyChecking=no -i ec2-key.pem $EC2_USER@$EC2_HOST << EOF
-          # ✅ Docker Compose 설치 확인
-          if ! command -v docker-compose &> /dev/null; then
-            sudo apt update
-            sudo apt install -y docker-compose-plugin
-          fi
-
           # ✅ Docker Hub 로그인
-          echo "${{ secrets.DOCKER_PAT }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+          # ✅ 기존 컨테이너 중지 및 삭제
+          docker stop onclub-api || true
+          docker rm onclub-api || true
 
           # ✅ 최신 Docker 이미지 가져오기
           docker pull ${{ secrets.DOCKER_USERNAME }}/onclub-api:latest
 
-          # ✅ 기존 컨테이너 중지 및 삭제
-          docker compose down || true
-
-          # ✅ 새로운 컨테이너 실행 (환경 변수 없이 실행)
-          docker compose up -d
+          # ✅ 새로운 컨테이너 실행
+          docker run -d --name onclub-api -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/onclub-api:latest
         EOF
