--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,10 @@ dependencies {
     //For aws S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
+    //aws SDK for base64 encoding
+    implementation 'javax.xml.bind:jaxb-api:2.3.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+
 }
 
 tasks.named('test') {
