--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,6 +60,10 @@ jobs:
         cloud.aws.credentials.secret-key=${{ secrets.AWS_CREDENTIALS_SECRET_KEY }}
         cloud.aws.region.static=ap-northeast-2
         cloud.aws.s3.bucket=${{ secrets.AWS_BUCKET_NAME }}
+
+        # Spring Boot binding
+        server.address=127.0.0.1
+
         EOF
 
     # ✅ Gradle 빌드 실행 (환경 변수 자동 포함)
