--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -64,6 +64,11 @@ jobs:
         # Spring Boot binding
         server.address=0.0.0.0
 
+        # APNs
+        apn.bundle.id=${{ secrets.APN_BUNDLE_ID }}
+        apn.key=${{ secrets.APN_KEY }}
+        apn.key.id=${{ secrets.APN_KEY_ID }}
+        apn.team.id=${{ secrets.APN_TEAM_ID }}
         EOF
 
     # ✅ Gradle 빌드 실행 (환경 변수 자동 포함)
